[gd_scene load_steps=2 format=2]

[ext_resource path="res://mods/uwp/patches/better-settings-numbers/pixel_slider.gd" type="Script" id=1]

[node name="pixel_vbox" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="pixel_label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
align = 2

[node name="pixel_slider" type="HSlider" parent="."]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 34.0
size_flags_vertical = 4
min_value = 1.0
max_value = 25.0
step = 0.5
value = 1.0

[connection signal="value_changed" from="pixel_slider" to="." method="_on_pixel_slider_value_changed"]
